Apply simple Java cleanup suggestions